--- a/plugin/data_masking/CMakeLists.txt
+++ b/plugin/data_masking/CMakeLists.txt
@@ -46,6 +46,6 @@ INSTALL(FILES data_masking.ini DESTINATION ${INSTALL_PLUGINDIR} COMPONENT Test)
 
 IF(UNIX)
   IF(INSTALL_MYSQLTESTDIR)
-    INSTALL(DIRECTORY tests/mtr/ DESTINATION ${INSTALL_MYSQLTESTDIR}/suite/audit_log COMPONENT Test)
+    INSTALL(DIRECTORY tests/mtr/ DESTINATION ${INSTALL_MYSQLTESTDIR}/suite/data_masking COMPONENT Test)
   ENDIF()
 ENDIF()
